--- a/contracts/chess/Nargo.toml
+++ b/contracts/chess/Nargo.toml
@@ -4,9 +4,10 @@ type = "contract"
 authors = [""]
 
 [dependencies]
-aztec = { git="https://github.com/AztecProtocol/aztec-nr", tag="v3.0.0-devnet.6-patch.1", directory="aztec" }
-balance_set = { git = "https://github.com/AztecProtocol/aztec-nr/", tag = "v3.0.0-devnet.6-patch.1", directory = "balance-set" }
-fog_of_war_chess = {tag="zw/test-errors", git = "https://github.com/zac-williamson/fog_of_war_chess"}
-mpclib = {tag="zw/test-errors", git = "https://github.com/zac-williamson/mpclib" }
+aztec = { git="https://github.com/AztecProtocol/aztec-nr", tag="v0.0.1-commit.23b0eb0", directory="aztec" }
+balance_set = { git = "https://github.com/AztecProtocol/aztec-nr/", tag = "v0.0.1-commit.23b0eb0", directory = "balance-set" }
+fog_of_war_chess = {tag="zw/test-errors-2", git = "https://github.com/zac-williamson/fog_of_war_chess"}
+mpclib = {tag="zw/test-errors-2", git = "https://github.com/zac-williamson/mpclib" }
 poseidon = { tag = "v0.1.1", git = "https://github.com/noir-lang/poseidon" }
 hat_nft = { path = "../hat_nft" }
+protocol_types = { tag = "v0.0.1-commit.23b0eb0", git = "https://github.com/AztecProtocol/aztec-packages/", directory="noir-projects/noir-protocol-circuits/crates/types"}
