--- a/contracts/hat_nft/Nargo.toml
+++ b/contracts/hat_nft/Nargo.toml
@@ -4,5 +4,6 @@ type = "contract"
 authors = [""]
 
 [dependencies]
-aztec = { git="https://github.com/AztecProtocol/aztec-nr", tag="v3.0.0-devnet.6-patch.1", directory="aztec" }
+aztec = { git="https://github.com/AztecProtocol/aztec-nr", tag="v0.0.1-commit.23b0eb0", directory="aztec" }
 poseidon = { tag = "v0.1.1", git = "https://github.com/noir-lang/poseidon" }
+protocol_types = { tag = "v0.0.1-commit.23b0eb0", git = "https://github.com/AztecProtocol/aztec-packages/", directory="noir-projects/noir-protocol-circuits/crates/types"}
